# agent-wrangler

./: README.md  compose.codex-multi.yaml  compose.ui.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
agents_wrangler/: __init__.py  cli.py  codex_runner_service.py  orchestrator.py  tester_service.py  ui_streamlit.py
demo_app/: app.py
demo_app/tests/: test_app.py
docker/: codex-runner.Dockerfile  tester.Dockerfile  ui.Dockerfile
tests/: test_codex_runner_roles.py  test_codex_runner_unit.py  test_orchestrator_ui.py
