[project]
name = "agents-wrangler"
version = "0.1.0"
description = "Python launcher & tester-service for Agent Wrangler"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pytest>=8.3",
]

[project.scripts]
aw = "agents_wrangler.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
