[project]
name = "agents-wrangler"
version = "0.2.0"
description = "Python launcher & tester-service for Agent Wrangler"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "typer>=0.20.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
]

[project.scripts]
aw = "agents_wrangler.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
