[project]
name = "agents-wrangler"
version = "0.3.0"
description = "Python launcher, tester-service, and Streamlit UI for Agent Wrangler"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "typer>=0.20.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "streamlit>=1.51.0",
    "respx>=0.22.0"
]

[project.scripts]
aw = "agents_wrangler.cli:app"
aw-ui = "agents_wrangler.ui_streamlit:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
